--- a/prueba .html
+++ b/prueba .html
@@ -9,5 +9,7 @@
 <body>
     <h1>Ice Cream App</h1>
     <!-- Agregar debajo de esta línea una párrafo ya hacer un cambio utilizando las etiquetas <p> .... </p>x  -->
+    <h2> Esta aplicación te permitirá elegir el sabor que quieras de Helados</h2>
+    <p> Tenemos disponibles sabores como "Chocolate","Strawberry","Vanilla", "Pistacho", "Neapolitan", "Mint Chip" </p>
 </body>
 </html>
