--- a/prueba .html
+++ b/prueba .html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ice Cream App</title>
-    <script src="/prueba.js"></script>
+  <title>Currículum Vitae - Ender Pérez</title>
+ 
 </head>
 <body>
-    <h1>Ice Cream App</h1>
-    <!-- Agregar debajo de esta línea una párrafo ya hacer un cambio utilizando las etiquetas <p> .... </p>x  -->
-    <h2> Esta aplicación te permitirá elegir el sabor que quieras de Helados</h2>
-    <p> Tenemos disponibles sabores como "Chocolate","Strawberry","Vanilla", "Pistacho", "Neapolitan", "Mint Chip", "Mango", "Maracuya" </p>
+  <h1>Currículum Vitae</h1>
+
+  <div class="section">
+    <h2>Datos personales</h2>
+    <ul>
+      <li><strong>Nombre:</strong> Ender Pérez</li>
+      <li><strong>Correo electrónico:</strong> ender.david.perez@gmail.com</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Experiencia laboral</h2>
+    <p>No tengo experiencia laboral aún.</p>
+  </div>
+
+  <div class="section">
+    <h2>Educación</h2>
+    <ul>
+      <li><strong>Desarrollador Full Stack - Junior</strong></li>
+      <li>Nombre de la institución: Generation </li>
+      <li>Año de inicio: 2023</li>
+      <li>Año de finalización:2023</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Habilidades técnicas</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>Base de datos: MongoDB , Mysql</li>
+    </ul>
+  </div>
 </body>
 </html>
